tests_bucklescript/__snapshots__/Error_Apollo_deprecatedFields_re.45024714.0.snapshot
Error Apollo › deprecatedFields.re › output
File \"operations/errors/deprecatedFields.re\", line 7, characters 6-21:
7 |       deprecatedField
          ^^^^^^^^^^^^^^^
Warning 22: Field \"deprecatedField\" has been deprecated. Reason: Use something else instead

